fix header and button component

--- a/frontend/src/components/header/header.module.css
+++ b/frontend/src/components/header/header.module.css
@@ -7,4 +7,10 @@
 
 .teamIcon {
     font-size: 26px;
+    margin-right: 12px;
+}
+
+.logoButton {
+    font-weight: 600;
+    text-transform: uppercase;
 }
